[gd_scene load_steps=7 format=3 uid="uid://cleft587sipe7"]

[ext_resource type="Script" uid="uid://0gkiidmm1xya" path="res://Buildings/Building.gd" id="1_k2na8"]
[ext_resource type="Texture2D" uid="uid://wao6rmmiyg37" path="res://Resources/SpriteSheet.png" id="2_qdqwo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g1udm"]
atlas = ExtResource("2_qdqwo")
region = Rect2(48, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8ypr"]
atlas = ExtResource("2_qdqwo")
region = Rect2(48, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yopf"]
atlas = ExtResource("2_qdqwo")
region = Rect2(48, 64, 48, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1gjg"]
size = Vector2(14, 12)

[node name="StoneFactory" type="Area2D"]
script = ExtResource("1_k2na8")
normal_texture = SubResource("AtlasTexture_g1udm")
hover_texture = SubResource("AtlasTexture_n8ypr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = SubResource("AtlasTexture_2yopf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f1gjg")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
